--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,18 @@ code {
 .color-red {
   color: red !important;
 }
+
+.main-content-container {
+  padding-bottom: 2rem;
+}
+
+.fixed-footer {
+  position: fixed;
+  bottom: 0;
+  color: white;
+  width: 100%;
+}
+
+.p-x-0-5 {
+  padding: 0 0.5rem;
+}
